--- a/views/recepcion_views.xml
+++ b/views/recepcion_views.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <!-- Formulario de recepción -->
+    <!-- FORMULARIO -->
     <record id="view_residuo_recepcion_form" model="ir.ui.view">
         <field name="name">residuo.recepcion.form</field>
         <field name="model">residuo.recepcion</field>
         <field name="arch" type="xml">
             <form string="Recepción de Residuos">
                 <header>
-                <button name="action_confirmar"
-                        type="object"
-                        string="Confirmar"
-                        class="btn-primary"
-                        modifiers='{"invisible": [["estado", "!=", "borrador"]]}'/>
+                    <button name="action_confirmar"
+                            type="object"
+                            string="Confirmar"
+                            class="btn-primary"
+                            modifiers='{"invisible": [["estado", "!=", "borrador"]]}'/>
                     <field name="estado" widget="statusbar" statusbar_visible="borrador,confirmado"/>
                 </header>
                 <sheet>
@@ -35,7 +35,7 @@
         </field>
     </record>
 
-    <!-- Vista lista -->
+    <!-- LISTA -->
     <record id="view_residuo_recepcion_tree" model="ir.ui.view">
         <field name="name">residuo.recepcion.list</field>
         <field name="model">residuo.recepcion</field>
@@ -48,12 +48,17 @@
         </field>
     </record>
 
-    <!-- Acción primero -->
-    <act_window id="action_residuo_recepcion" name="Recepciones de Residuos"
-                res_model="residuo.recepcion" view_mode="list,form"/>
+    <!-- PRIMERO la acción -->
+    <record id="action_residuo_recepcion" model="ir.actions.act_window">
+        <field name="name">Recepciones de Residuos</field>
+        <field name="res_model">residuo.recepcion</field>
+        <field name="view_mode">list,form</field>
+    </record>
 
-    <!-- Menú después -->
+    <!-- DESPUÉS los menús -->
     <menuitem id="menu_residuo_root" name="Residuos" sequence="10"/>
-    <menuitem id="menu_residuo_recepcion" name="Recepciones" parent="menu_residuo_root"
-              action="action_residuo_recepcion" sequence="10"/>
+    <menuitem id="menu_residuo_recepcion" name="Recepciones"
+              parent="menu_residuo_root"
+              action="residuo_recepcion.action_residuo_recepcion"
+              sequence="10"/>
 </odoo>
