--- a/views/recepcion_views.xml
+++ b/views/recepcion_views.xml
@@ -22,7 +22,7 @@
                     <notebook>
                         <page string="Residuos Recolectados">
                             <field name="linea_ids">
-                                <tree editable="bottom">
+                                <tree editable="bottom" model="residuo.recepcion.linea">
                                     <field name="product_id"/>
                                     <field name="cantidad"/>
                                     <field name="unidad"/>
