--- a/views/recepcion_views.xml
+++ b/views/recepcion_views.xml
@@ -42,6 +42,7 @@
     <record id="view_residuo_recepcion_tree" model="ir.ui.view">
         <field name="name">residuo.recepcion.list</field>
         <field name="model">residuo.recepcion</field>
+        <field name="type">list</field> <!-- CORREGIDO -->
         <field name="arch" type="xml">
             <tree>
                 <field name="name"/>
