--- a/views/recepcion_views.xml
+++ b/views/recepcion_views.xml
@@ -42,13 +42,13 @@
     <record id="view_residuo_recepcion_tree" model="ir.ui.view">
         <field name="name">residuo.recepcion.list</field>
         <field name="model">residuo.recepcion</field>
-        <field name="type">list</field> <!-- CORREGIDO -->
+        <field name="type">list</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name"/>
                 <field name="sale_order_id"/>
                 <field name="estado"/>
-            </tree>
+            </list>
         </field>
     </record>
 
